--- a/app/index.html
+++ b/app/index.html
@@ -560,10 +560,10 @@
               <img src="images/blog/1.jpg" alt="blog img">
             </a>
             <div class="blog__item-box">
-            <div class="blog__item-info">
-              <a class="blog__item-author" href="#">By Admin</a>
-              <a class="blog__item-data" href="#">10 January, 2020</a>
-            </div>
+              <div class="blog-box">
+                <a class="blog-box__author" href="#">By Admin</a>
+                <a class="blog-box__date" href="#">10 January, 2020</a>
+              </div>
             <a class="blog__item-title-link" href="#">
               <h4 class="blog__item-title">
                 Our Apps User Use Mobile On His Mobile
@@ -579,9 +579,9 @@
               <img src="images/blog/2.jpg" alt="blog img">
             </a>
             <div class="blog__item-box">
-              <div class="blog__item-info">
-                <a class="blog__item-author" href="#">By Admin</a>
-                <a class="blog__item-data" href="#">10 January, 2020</a>
+              <div class="blog-box">
+                <a class="blog-box__author" href="#">By Admin</a>
+                <a class="blog-box__date" href="#">10 January, 2020</a>
               </div>
               <a class="blog__item-title-link" href="#">
                 <h4 class="blog__item-title">
@@ -598,9 +598,9 @@
               <img src="images/blog/3.jpg" alt="blog img">
             </a>
             <div class="blog__item-box">
-              <div class="blog__item-info">
-                <a class="blog__item-author" href="#">By Admin</a>
-                <a class="blog__item-data" href="#">10 January, 2020</a>
+              <div class="blog-box">
+                <a class="blog-box__author" href="#">By Admin</a>
+                <a class="blog-box__date" href="#">10 January, 2020</a>
               </div>
               <a class="blog__item-title-link" href="#">
                 <h4 class="blog__item-title">
