--- a/app/contacts.html
+++ b/app/contacts.html
@@ -6,6 +6,7 @@
   <title>Document</title>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
   <link rel="stylesheet" href="css/contacts.min.css">
+  <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
 <header class="header">
