--- a/app/shop.html
+++ b/app/shop.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/shop.min.css">
+  <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
 <header class="header">
@@ -80,8 +81,10 @@
     <section class="shop">
       <div class="container">
         <div class="shop__inner">
+            <button class="shop__filter-btn" type="submit">
+              <img src="images/icon/filter-solid.svg" alt="filter icon">
+            </button>
           <div class="shop__filters filter">
-
             <div class="filter-search filter__item">
               <h3 class="filter__title">Search</h3>
               <form class="filter-search__form" action="#">
